<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/layout_bg">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/ivUserBackgroundImage"
        android:layout_margin="3dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"/>

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:scaleType="fitCenter"
        app:riv_corner_radius="5dip"
        app:riv_mutate_background="true"
        app:riv_tile_mode="clamp"
        app:riv_oval="true"
        app:riv_border_color="#ffffff"
        app:riv_border_width="2dp"
        android:layout_alignParentTop="true"


        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>

    <Button
        style="@style/Widget.Button.NotFollowing"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:text="Follow"
        android:id="@+id/btnFollow"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_person_add_white_24dp"
        android:layout_below="@+id/ivUserPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="12dp"
        android:textSize="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/tvUserName"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_below="@+id/btnFollow"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_screen_name"
        android:id="@+id/tvUserScreenName"
        android:layout_below="@+id/tvUserName"
        android:layout_marginBottom="10dp"
        android:textStyle="italic"
        android:textSize="10sp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:text="@string/tweet_text"
        android:id="@+id/tvUserDescription"
        android:layout_below="@+id/tvUserScreenName"
        android:layout_marginLeft="12dp"
        android:visibility="gone"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp" />

</RelativeLayout>